--- a/TiendaAngular-JDurand/src/index.html
+++ b/TiendaAngular-JDurand/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="b1 b2" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -11,14 +11,15 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
+
 
 <body>
     <app-root></app-root>
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
 </body>
+
 
 </html>
